# optics

./: .gitignore  README.md  pyproject.toml
src/optics/: apertures.py  display.py  rays.py  screen.py  sources.py  surfaces.py  system.py
tests/: test_system.py
